src/wayland/surface_interface_p.h
@@ -105,9 +105,9 @@ public:
     SubSurfaceInterface *subSurface = nullptr;
     QMatrix4x4 surfaceToBufferMatrix;
     QMatrix4x4 bufferToSurfaceMatrix;
-    QSize bufferSize;
-    QSize implicitSurfaceSize;
-    QSize surfaceSize;
+    QSize bufferSize = QSize(0, 0);
+    QSize implicitSurfaceSize = QSize(0, 0);
+    QSize surfaceSize = QSize(0, 0);
     QRegion inputRegion;
     QRegion opaqueRegion;
     ClientBuffer *bufferRef = nullptr;
